--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header{
+  text-align: center;
+}
+
+figure{
+text-align: center;
+}
+
+nav a {
+  padding: 10px;
+  background-color: antiquewhite;
+}
+
+figcaption{
+  font-size: 14px;
+  text-align: center;
+}
+
+#featured-property p{
+  text-align: center;
+  width: 800px;
+  
+}
+
+#details div{
+  background-color: blanchedalmond;
+  text-align: center;
+  width: 25%;
+  float: left;
+}
